@@ -32,9 +32,16 @@ they occurred between. For more detailed information see the
 @item Sawfish now got an implementation of the FDO (freedesktop.org) application menu, it is
 beeing generated, if there's no customized apps-menu
 
-@item Since v1.5.0 @code{~/.sawmillrc} is no longer a valid resoucefile, from this version on,
+@item User config file changes
+
+In Sawfish < 1.6, @code{sawfish.wm.defaults} is loaded by default,
+only if the @file{~/.sawfishrc} lacks. Now, it is always read, so you
+don't have to @code{require} it. It sets up GNOME and KDE support if
+they run, and does @code{(require 'sawfish.wm.ext.error-handler)}.
+
+Since v1.5.0 @code{~/.sawmillrc} is no longer a valid resoucefile, from this version on,
 Sawfish will rename @code{~/.sawmillrc} to @code{~/.sawfishrc}, if the former does exist on
-your system, but the later doesn't
+your system, but the latter doesn't.
 
 @item @code{sawfish-ui} has been renamed to @code{sawfish-config}
 
