@@ -1,3 +1,9 @@
+2009-10-15  Teika kazura <teika@lavabit.com>
+	* lisp/sawfish/wm/defaults.jl
+	* lisp/sawfish/wm/user.jl
+	* man/faq.texi
+	* man/news.texi: News and doc that sawfish.wm.defaults is always read, regardless of .sawfishrc existence.
+
 2009-10-09  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/menus.jl: added "Reload Appsmenu" entry
 
